Spacing & Colors Fixed

--- a/All-Project/src/components/Loader/loader.css
+++ b/All-Project/src/components/Loader/loader.css
@@ -1,9 +1,9 @@
 .dots {
   width: 72px;
   height: 34.6px;
-  background: radial-gradient(circle closest-side, #025ac2 90%, #0000) 0% 50%,
-    radial-gradient(circle closest-side, #025ac2 90%, #0000) 50% 50%,
-    radial-gradient(circle closest-side, #025ac2 90%, #0000) 100% 50%;
+  background: radial-gradient(circle closest-side, rgb(var(--primary)) 90%, #0000) 0% 50%,
+    radial-gradient(circle closest-side, rgb(var(--primary)) 90%, #0000) 50% 50%,
+    radial-gradient(circle closest-side, rgb(var(--primary)) 90%, #0000) 100% 50%;
   background-size: calc(100% / 3) 13.4px;
   background-repeat: no-repeat;
   animation: dots-animation 1s infinite linear;
